--- a/perl6/doc/doc/Language/nativecall.pod
+++ b/perl6/doc/doc/Language/nativecall.pod
@@ -17,8 +17,8 @@ The simplest imaginable use of NativeCall would look something like this:
 The first line imports various traits and types. The next line looks like
 a relatively ordinary Perl 6 sub declaration - with a twist. We use the
 "native" trait in order to specify that the sub is actually defined in a
-native library. The platform-specific extension (e.g. .so or .dll) will be
-added for you.
+native library. The platform-specific extension (e.g., '.so' or '.dll'),
+as well as any customary prefixes (e.g., 'lib') will be added for you.
 
 The first time you call "some_argless_function", the "libsomething" will be
 loaded and the "some_argless_function" will be located in it. A call will then
@@ -60,28 +60,33 @@ Here, we have declared that the function takes two 32-bit integers and returns
 a 32-bit integer. Here are some of the other types that you may pass (this will
 likely grow with time).
 
-    int8           (char in C)
-    int16          (short in C)
-    int32          (int in C)
-    int64          (64-bit explicit int in C like int64_t in C99)
-    long           (32- or 64-bit, depends what long means locally)
-    longlong       (at least 64bits, what long long means locally)
+    int8           (int8_t in C, also used for char)
+    int16          (int16_t in C, also used for short)
+    int32          (int32_t in C, also used for int)
+    int64          (int64_t in C)
+    uint8          (uint8_t in C, also used for unsigned char)
+    uint16         (uint16_t in C, also used for unsigned short)
+    uint32         (uint32_t in C, also used for unsigned int)
+    uint64         (uint64_t in C)
+    long           (long in C)
+    longlong       (long long in C, at least 64-bit)
     num32          (float in C)
     num64          (double in C)
     Str            (C string)
-    CArray[int32]  (int* in C, an array of integers)
+    CArray[int32]  (int* in C, an array of ints)
     Pointer[void]  (void* in C, can point to all other types)
     bool           (bool from C99)
     size_t         (size_t in C)
 
-Don't use Perl 6 native types like C<int> or C<num>, as they could lead to
-unwanted boundary issue between 32 bits and 64 bits systems.
+Don't use Perl 6 native types like C<int> or C<num>, as they don't have to
+correspond to the local C equivalent (e.g., Perl 6's C<int> can be 8 bytes but
+C's C<int> is only 4 bytes).
 
 Note that the lack of a C<returns> trait is used to indicate void return type.
 Do I<not> use the 'void' type anywhere except in the Pointer parameterization.
 
 For strings, there is an additional "encoded" trait to give some extra hints on
-how to do the marshalling.
+how to do the marshaling.
 
     sub message_box(Str is encoded('utf8')) is native('gui') { * }
 
@@ -93,24 +98,32 @@ routine itself.
 Note that a null string can be passed by passing the Str type object; a null
 return will also be represented by the type object.
 
-For string arguments that are specified as C<const char *> it is necessary
-to tell Perl not to free the memory allocated to the C string after the
-function returns using C<explicitly-manage> :
+If the C function requires the lifetime of a string to exceed the function
+call, the argument must be manually encoded and passed as C<CArray[uint8]>:
 
-    # C prototype is void set_foo(const char * foo)
-	sub set_foo(Str) is native('foo') { * }
+    # C prototype is void set_foo(const char *)
+    sub set_foo(CArray[uint8]) is native('foo') { * }
+    # C prototype is void use_foo(void)
+    sub use_foo() is native('foo') { * } # will use pointer stored by set_foo()
+
     my $string = "FOO";
-    explicitly-manage($string);
-    set_foo($string);
+    # The lifetime of this variable must be equal to the required lifetime of
+    # the data passed to the C function.
+    my $array = CArray[uint8].new($string.encode.list);
+
+    set_foo($array);
+    # ...
+    use_foo();
+    # It's fine if $array goes out of scope starting from here.
 
 =head1 Basic use of Pointers
 
 When the signature of your native function needs a pointer to some native type
-(int, uint, etc.) all you need to do is declare the argument C<is rw> :
+(C<int32>, C<uint32>, etc.) all you need to do is declare the argument C<is rw> :
 
-   # C prototype is void my_version(int *mayor, int *minor)
-       sub my_version(int32 is rw, int32 is rw) is native('foo') { * }
-   my_version(my int32 $mayor, my int32 $minor); # Pass a pointer to
+    # C prototype is void my_version(int *mayor, int *minor)
+    sub my_version(int32 is rw, int32 is rw) is native('foo') { * }
+    my_version(my int32 $mayor, my int32 $minor); # Pass a pointer to
 
 Sometimes you need to get a pointer (for example, a library handle) back from a
 C library. You don't care about what it points to - you just need to keep hold
@@ -165,7 +178,7 @@ Once again, type objects are used to represent nulls.
 =head1 Function Pointers
 
 C libraries can expose pointers to C functions as return values of functions and as
-members of Structures like e.g. structs and unions.
+members of Structures like, e.g., structs and unions.
 
 Example of invoking a function pointer "$fptr" returned by a function "f", using a
 signature defining the desired function parameters and return value:
@@ -181,7 +194,7 @@ signature defining the desired function parameters and return value:
 
 NativeCall has some support for arrays. It is constrained to work with machine-size
 integers, doubles and strings, sized numeric types, arrays of pointers, arrays of
-structs and arrays of arrays.
+structs, and arrays of arrays.
 
 Perl 6 arrays, which support amongst other things laziness, are laid out in memory
 in a radically different way to C arrays. Therefore, the NativeCall library offers
@@ -189,7 +202,7 @@ a much more primitive CArray type, which you must use if working with C arrays.
 
 Here is an example of passing a C array.
 
-    sub RenderBarChart(Str, int, CArray[Str], CArray[num]) is native("chart") { * }
+    sub RenderBarChart(Str, int32, CArray[Str], CArray[num]) is native("chart") { * }
     my @titles := CArray[Str].new;
     @titles[0]  = 'Me';
     @titles[1]  = 'You';
@@ -213,20 +226,20 @@ use C<$> all the way when using NativeCall. :-)
 Getting return values for arrays works out just the same.
 
 Some library APIs may take an array as a buffer that will be populated by the
-C function and, for, instance, return the actual number of items populated:
+C function and, for instance, return the actual number of items populated:
 
-   sub get_n_ints(CArray[int], int) returns Int is native('ints');
+    sub get_n_ints(CArray[int32], int32) returns int32 is native('ints') { * }
 
 In these cases it is important that the CArray has at least the number of
 elements that are going to be populated before passing it to the native
 subroutine, otherwise the C function may stomp all over Perl's memory
 leading to possibly unpredictable behaviour:
 
-   my $ints = CArray[int].new;
-   my $number_of_ints = 10;
-   $ints[$number_of_ints - 1] = 0; # extend the array to 10 items
+    my $ints = CArray[int32].new;
+    my $number_of_ints = 10;
+    $ints[$number_of_ints - 1] = 0; # extend the array to 10 items
 
-   my $n = get_n_ints($ints, $number_of_ints);
+    my $n = get_n_ints($ints, $number_of_ints);
 
 The memory management of arrays is important to understand. When you create an
 array yourself, then you can add elements to it as you wish and it will be
@@ -255,7 +268,7 @@ quick use of the "repr" trait:
         has num64 $.y;
     }
 
-The attributes can only be of the types that NativeCall knows how to marshall into
+The attributes can only be of the types that NativeCall knows how to marshal into
 struct fields. Currently, structs can contain machine-sized integers, doubles,
 strings, and other NativeCall objects (CArrays, and those using the CPointer and
 CStruct reprs). Other than that, you can do the usual set of things you would with
@@ -317,18 +330,18 @@ instead:
 
 TBD more
 
-You can type your C<Pointer> with passing the type as parameter. It works with native type
-but also C<CArray> and C<CStruct> defined type. NativeCall will not implicitly alloc the memory for it
+You can type your C<Pointer> by passing the type as a parameter. It works with the native type
+but also with C<CArray> and C<CStruct> defined types. NativeCall will not implicitly alloc the memory for it
 even when calling new on them.
 It's mostly useful in the case of a C routine returning a pointer, or if it's a pointer
-embeded in a C<CStruct>.
+embedded in a C<CStruct>.
 
-You have to call C<.deref> on it to access the embeded type.
+You have to call C<.deref> on it to access the embedded type.
 
-  my Pointer[int32] $p; #For a pointer on int32;
-  my Pointer[MyCstruct] $p2 = some_c_routine();
-  my MyCstruct $mc = $p2.deref;
-  say $mc.field1;
+    my Pointer[int32] $p; #For a pointer on int32;
+    my Pointer[MyCstruct] $p2 = some_c_routine();
+    my MyCstruct $mc = $p2.deref;
+    say $mc.field1;
 
 
 
@@ -358,48 +371,48 @@ to callbacks.
 
 TBD more
 
-The C<native> trait accept a simple lib name or a full path.
+The C<native> trait accepts the library name or the full path.
 
-  constant LIBMYSQL = 'mysqlclient';
-  constant LIBFOO = '/usr/lib/libfoo.so.1';
-  # and later
-  sub mysql_affectied_rows( .. ) returns int32 is native(LIBMYSQL);
-  sub bar is native(LIBFOO);
+    constant LIBMYSQL = 'mysqlclient';
+    constant LIBFOO = '/usr/lib/libfoo.so.1';
+    # and later
+    sub mysql_affectied_rows( .. ) returns int32 is native(LIBMYSQL);
+    sub bar is native(LIBFOO);
 
-You can also put incomplete path like './foo', NativeCall will automaticly put
-the right extension according to the plateform specification.
+You can also put an incomplete path like './foo' and NativeCall will automatically put
+the right extension according to the platform specification.
 
-BE CAREFUL: the C<native> trait and C<constant> are evalued at compile time. Don't write a constant
-that depend on dynamic variable like:
+BE CAREFUL: the C<native> trait and C<constant> are evaluated at compile time. Don't write a constant
+that depends on a dynamic variable like:
 
-  constant LIBMYSQL = %*ENV<P6LIB_MYSQLCLIENT> || 'mysqlclient';
+    constant LIBMYSQL = %*ENV<P6LIB_MYSQLCLIENT> || 'mysqlclient';
 
 This will keep the value given at compile time. A module will be precompiled and C<LIBMYSQL> will
-keep the value it get evaluated when the module get precompiled.
+keep the value it acquires when the module gets precompiled.
 
 =head2 ABI/API Version
 
 If you write C<native('foo')> NativeCall will search libfoo.so under Unix like system (libfoo.dynlib on Os X, foo.dll on win32).
-In most modern system it will requiere you or the user of your module to install
-the develepment package because it's recommanded to always provide an API/ABI version to a
+In most modern system it will require you or the user of your module to install
+the development package because it's recommended to always provide an API/ABI version to a
 shared library, so libfoo.so ends often being a symbolic link provided only by a devel package.
 
-To avoid that, the C<native> trait allow you to specify the API/ABI version. It can be a full
-version or just a part of it (Try to stick to Major version, some BSD does not care for minor)
+To avoid that, the C<native> trait allows you to specify the API/ABI version. It can be a full
+version or just a part of it. (Try to stick to Major version, some BSD code does not care for Minor.)
 
-  sub foo is native('foo', v1); # Will try to load libfoo.so.1
-  sub foo is native('foo', v1.2.3); # Will try to load libfoo.so.1.2.3
+    sub foo is native('foo', v1); # Will try to load libfoo.so.1
+    sub foo is native('foo', v1.2.3); # Will try to load libfoo.so.1.2.3
 
-  my List $lib = ('foo', 'v1');
-  sub foo is native($lib);
+    my List $lib = ('foo', 'v1');
+    sub foo is native($lib);
 
 
 =head2 Routine
 
-the C<native> trait also accept a C<Callable> as argument, allowing you to provide your
+The C<native> trait also accepts a C<Callable> as argument, allowing you to provide your
 own way to handle the way it will find the library file to load.
 
-  sub foo is native(sub {'libfoo.so.42'});
+    sub foo is native(sub {'libfoo.so.42'});
 
 It will only be called at the first invocation of the sub.
 
@@ -422,8 +435,8 @@ to print the home directory of the current user:
         has Str $.pw_dir;
         has Str $.pw_shell;
     }
-    sub getuid()           returns uint32   is native(Str) {};
-    sub getpwuid(int $uid) returns PwStruct is native(Str) {};
+    sub getuid()              returns uint32   is native(Str) { * };
+    sub getpwuid(uint32 $uid) returns PwStruct is native(Str) { * };
 
     say getpwuid(getuid()).pw_dir;
 
@@ -435,7 +448,7 @@ Though of course C<$*HOME> is a much easier way :-)
 Variables exported by a library -- also named "global" or "extern"
 variables -- can be accessed using C<cglobal>.  For example:
 
-    my $var := cglobal('libc.so.6', 'errno', int)
+    my $var := cglobal('libc.so.6', 'errno', int32)
 
 This code binds to C<$var> a new L<Proxy|/type/Proxy> object that
 redirects all its accesses to the integer variable named "errno" as
@@ -444,14 +457,14 @@ exported by the "libc.so.6" library.
 
 =head1 C++ Support
 
-NativeCall offer a support to use class and method  from C++ as show in
-L<https://github.com/rakudo/rakudo/blob/nom/t/04-nativecall/13-cpp-mangling.t> (and it associated cpp file)
+NativeCall offers support to use classes and methods from C++ as shown in
+L<https://github.com/rakudo/rakudo/blob/nom/t/04-nativecall/13-cpp-mangling.t> (and its associated C++ file).
 Note that at the moment it's not as tested and developed as C support.
 
 =head1 Examples
 
 The L<zavolaj|https://github.com/jnthn/zavolaj> git repository (where NativeCall was
-originaly developed) hosts L<various examples|https://github.com/jnthn/zavolaj/tree/master/examples>
+originally developed) hosts L<various examples|https://github.com/jnthn/zavolaj/tree/master/examples>
 of how to use NativeCall.
 
 More examples can be found L<in the DBIsh repository
