--- a/perl6/doc/doc/Type/Pair.pod
+++ b/perl6/doc/doc/Type/Pair.pod
@@ -13,7 +13,7 @@ arguments and parameters.
 X<:> X<< => >> X<:!>
 There are many syntaxes for creating C<Pair>s:
 
-    Pair.new('key','value)  # The canonical way
+    Pair.new('key','value')  # The canonical way
     'key' => 'value'        # this...
     :key<value>             # ...means the same as this
     :key<value1 value2>     # But this is  key => <value1 value2>
@@ -43,6 +43,18 @@ Returns a new C<Pair> object with key and value exchanged.
     my $p = (6 => 'Perl').antipair;
     say $p.key;         # Perl
     say $p.value;       # 6
+
+=head2 method key
+
+Defined as:
+
+    multi method key(Pair:D:)
+
+Usage:
+
+    PAIR.key
+
+Returns the I<key> part of the C<Pair>.
 
 =head2 method value
 
