--- a/perl6/doc/doc/Language/5to6-nutshell.pod
+++ b/perl6/doc/doc/Language/5to6-nutshell.pod
@@ -969,7 +969,7 @@ denominator is limited to C<2**64>, after which it will automatically
 upgrade to C<Num> to preserve performance).  If you want a C<Rat> with
 an arbitrary-precision denominator, C<FatRat> is available.
 
-=head3 C<constant>
+=head3 X<C<constant>|constant>
 
 In Perl 6, C<constant> is a declarator for variables, just like C<my>,
 except the variable is permanently locked to the result of its
@@ -1175,6 +1175,17 @@ because Perl 6's module loading isn't directly compatible with operating
 system paths.
 
 =head1 Misc.
+
+=head2 C<'0'> is True
+
+Unlike Perl 5, a string containing nothing but zero ('0') is C<True>. As Perl 6
+has types in core, that makes more sense. This also means the common pattern:
+
+    ... if defined $x and length $x; # or just length() in modern perls
+
+In Perl 6 becomes a simple
+
+    ... if $x;
 
 =head2 C<dump>
 
