--- a/perl6/doc/doc/Language/concurrency.pod
+++ b/perl6/doc/doc/Language/concurrency.pod
@@ -293,7 +293,7 @@ following code outputs 0 .. 5 :
     $supply.tap(-> $v { say $v });
     sleep 10;
 
-This could also be written using the C<react> keyword:
+This could also be written using the X<C<react>> keyword:
 
     react {
         whenever Supply.interval(2) -> $v {
@@ -302,7 +302,7 @@ This could also be written using the C<react> keyword:
         }
     }
 
-Here the C<whenever> keyword creates a tap on the L<Supply> from the provided 
+Here the X<C<whenever>> keyword creates a tap on the L<Supply> from the provided 
 block. The C<react> block is exited when C<done()> is called in one of the taps.
 
 A second argument can be supplied to C<interval> which specifies a delay
