--- a/perl6/doc/doc/Language/containers.pod
+++ b/perl6/doc/doc/Language/containers.pod
@@ -4,7 +4,7 @@
 
 =SUBTITLE A low-level explanation of Perl 6 containers
 
-This article started as a conversion on IRC explaining the difference
+This article started as a conversation on IRC explaining the difference
 between the C<Array> and the C<List> type in Perl 6. It explains the levels
 of indirection involved in dealing with variables and container elements.
 
