--- a/perl6/doc/doc/Language/performance.pod
+++ b/perl6/doc/doc/Language/performance.pod
@@ -14,7 +14,7 @@ L<"critical 3%"|https://en.wikiquote.org/wiki/Donald_Knuth> by "profiling" as ex
 
 =head2 Time with C<now - INIT now>
 
-Expressions of the form C<now - BEGIN now>, where C<BEGIN> is a
+Expressions of the form C<now - INIT now>, where C<INIT> is a
 L<phase in the running of a Perl 6 program|/language/phasers>, provide a great idiom for timing code snippets.
 
 Use the C<m: your code goes here> L<#perl6 channel evalbot|http://doc.perl6.org/language/glossary#camelia>
@@ -130,31 +130,6 @@ easy to accomplish in Perl 6. For more on this general topic, read the wikipedia
 L<algorithmic efficiency|https://en.wikipedia.org/wiki/Algorithmic_efficiency>,
 especially the See also section near the end.
 
-=head3 Process lazily
-
-Consider a program that processes every line in a large text file. An obvious simple approach is to
-slurp the lines of the file into an array storing each line as an array element and then loop through
-that array:
-
-    my @lines = slurp 'largefile.txt';
-    for @lines -> $line {
-        # do something with $line
-    }
-    
-The assignment of all the lines in 'largefile.txt' to C<@lines> all at once is called "eager" assignment,
-the opposite of "lazy".
-
-If 'largefile.txt' contains a million very long lines you just used up a ton of memory and it may
-well take quite a while before your code starts to do something with the first line. 
-
-A "lazy" approach often performs much better than an eager one:
-
-    for 'largefile.txt'.IO.lines -> $line {
-        # do something with $line
-    }
-    
-This loop pulls a line from 'largefile.txt', immediately processes it, then gets the next, and so on.
-
 =head3 Change sequential/blocking code to parallel/non-blocking
 
 This is another very important class of algorithmic improvement.
@@ -170,7 +145,7 @@ Is there an existing high (enough) performance implementation of what you're try
 There are a lot of C libs out there.
 L<NativeCall|/language/nativecall> makes it easy to create wrappers for C libs (there's experimental
 support for C++ libs too) such as L<Gumbo|https://github.com/Skarsnik/perl6-gumbo>.
-e(Data marshalling and call handling is somewhat poorly optimized at the time of writing this but for many
+(Data marshalling and call handling is somewhat poorly optimized at the time of writing this but for many
 applications that won't matter.)
 
 Perl 5's compiler can be treated as a C lib. Mix in Perl 6 types, the L<MOP|/language/mop>, and some hairy
