--- a/perl6/doc/doc/Language/setbagmix.pod
+++ b/perl6/doc/doc/Language/setbagmix.pod
@@ -108,7 +108,7 @@ Returns C<True> if C<$a> is an B<element> of C<$b>.
 
 X<Membership operator> (alternate).
 
-Equivalent to L«(elem)», at codepoint U+2208 (ELEMENT OF).
+Equivalent to L«(elem)|/routine/(elem)», at codepoint U+2208 (ELEMENT OF).
 
 =head4 infix ∉
 
@@ -134,7 +134,7 @@ Returns C<True> if C<$a> B<contains> C<$b> as an element.
 
 X<Contains operator> (alternate).
 
-Equivalent to L«(cont)», at codepoint U+220B (CONTAINS AS MEMBER).
+Equivalent to L«(cont)|/routine/(cont)», at codepoint U+220B (CONTAINS AS MEMBER).
 
 =head4 infix ∌
 
