--- a/perl6/doc/doc/Language/traps.pod
+++ b/perl6/doc/doc/Language/traps.pod
@@ -222,7 +222,7 @@ Here, C<tc> means "title case".
 
 =head2 Strings are not iterable
 
-There are methods that Str inherits from Any that work on iterables like lists. Interators on Strings contain one element that is the whole string. To use C<sort>, C<reverse> and friends, you need to split the string into a list first.
+There are methods that Str inherits from Any that work on iterables like lists. Iterators on Strings contain one element that is the whole string. To use C<sort>, C<reverse> and friends, you need to split the string into a list first.
 
     say "abc".reverse;              #   abc (what is wrong)
     say "abc".comb.reverse.join;    #   cba
