--- a/perl6/doc/doc/Type/Routine.pod
+++ b/perl6/doc/doc/Type/Routine.pod
@@ -156,7 +156,7 @@ produces
 =end code
 
 Note that C<return> marks return values as read only; if you need an early
-exit from an C<is rw> routine, you have to use C<return-rw> instead.
+exit from an C<is rw> routine, you have to use X<C<return-rw>|return-rw> instead.
 
 =head2 trait is export
 
