git subrepo clone --force git://github.com/kuerbis/Term-Choose-p6.git kuerbis/Term-Choose-p6
subrepo:
  subdir:   "kuerbis/Term-Choose-p6"
  merged:   "f087bd0"
upstream:
  origin:   "git://github.com/kuerbis/Term-Choose-p6.git"
  branch:   "master"
  commit:   "f087bd0"
git-subrepo:
  version:  "0.2.3"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "87a8275"

--- a/kuerbis/Term-Choose-p6/Changes
+++ b/kuerbis/Term-Choose-p6/Changes
@@ -1,6 +1,12 @@
 Revision history for Term::Choose
 
 
+0.109   2016-03-21
+        - Slow down the getch-loop so it doesn't eat up 100% of a core
+
+0.108   2016-03-20
+        - Upgrade Term::Choose::NCurses (required by T::F)
+
 0.107   2016-03-17
         - Fixed source-url in META6.json
 
