git subrepo clone --force git://github.com/kuerbis/Term-Choose-Util-p6.git kuerbis/Term-Choose-Util-p6
subrepo:
  subdir:   "kuerbis/Term-Choose-Util-p6"
  merged:   "9a57270"
upstream:
  origin:   "git://github.com/kuerbis/Term-Choose-Util-p6.git"
  branch:   "master"
  commit:   "9a57270"
git-subrepo:
  version:  "0.2.3"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "87a8275"

--- a/kuerbis/Term-Choose-Util-p6/Changes
+++ b/kuerbis/Term-Choose-Util-p6/Changes
@@ -1,6 +1,14 @@
 Revision history for Term::Choose::Util
 
 
+0.011   2016-04-12
+        - Update documentation
+
+0.010   2016-04-07
+        - Check options
+        - Code refactoring
+        - Update documentation
+
 0.009   2016-03-17
         - Fixed source-url in META6.json
 
