git subrepo clone --force git://github.com/kuerbis/Term-TablePrint-p6.git kuerbis/Term-TablePrint-p6
subrepo:
  subdir:   "kuerbis/Term-TablePrint-p6"
  merged:   "83d6555"
upstream:
  origin:   "git://github.com/kuerbis/Term-TablePrint-p6.git"
  branch:   "master"
  commit:   "83d6555"
git-subrepo:
  version:  "0.2.3"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "87a8275"

--- a/kuerbis/Term-TablePrint-p6/Changes
+++ b/kuerbis/Term-TablePrint-p6/Changes
@@ -1,6 +1,11 @@
 Revision history for Term::TablePrint
 
 
+0.010   2016-04-15
+        - No changes
+        - Try to fix travis error
+
+
 0.009   2016-03-17
         - Fixed source-url in META6.json
 
