--- a/perl6/doc/doc/Language/modules.pod
+++ b/perl6/doc/doc/Language/modules.pod
@@ -311,9 +311,11 @@ directory|https://modules.perl6.org>. C<:)>
 For now, the process requires that you use git for your module's version
 control.
 
-The instructions herein require that you have a
-L<GitHub|https://www.github.com> account so that your module can be shared
-from its GitHub repository.
+The instructions herein assume that you have a
+L<GitHub|https://www.github.com> account so that your module can be
+shared from its GitHub repository, however another provider such as
+L<GitLab|https://about.gitlab.com/> should work as long as it works in
+a similar way.
 
 To share your module, do the following:
 
@@ -333,7 +335,7 @@ To share your module, do the following:
         |   `-- Vortex
         |       `-- TotalPerspective.pod6
         |-- LICENSE
-        |-- META.info
+        |-- META6.json
         |-- README.md
         `-- t
             `-- basic.t
@@ -381,11 +383,11 @@ To share your module, do the following:
     »
 
     =begin item
-    Make your C<META.info> file look something like this:
+    Make your C<META6.json> file look something like this:
 
     =for code :allow<R>
     {
-        "perl" : "6.*",
+        "perl" : "6.c",
         "name" : "Vortex::TotalPerspective",
         "version" : "0.1.0",
         "description" : "Wonderful simulation to get some perspective.",
@@ -409,8 +411,11 @@ To share your module, do the following:
 	supplied.
 
     In the C<provides> section, include all the namespaces provided by
-    your distribution and set C<perl> version to the minimum perl version
-    your module works with
+    your distribution and that you wish to be installed, only module
+    files that are explicitly included here will be installed and
+    available with C<use> or C<require> in other programs
+    
+    Set C<perl> version to the minimum perl version your module works with.
 
     The C<resources> section is optional, but, if present, should contain a
     list of the files in your C<resources> directory that you wish to be
@@ -419,7 +424,7 @@ To share your module, do the following:
     C<%?RESOURCES> Hash indexed on the name provided.
 
 	The L<Test::META module | https://github.com/jonathanstowe/Test-META/>
-	can help you check the correctness of the META.info file.
+	can help you check the correctness of the META6.json file.
 
     =end item
 
