--- a/perl6/doc/doc/Language/objects.pod
+++ b/perl6/doc/doc/Language/objects.pod
@@ -685,6 +685,33 @@ This allows you to create roles that act as abstract interfaces.
 The implementation of the stubbed method may also be provided by another
 role.
 
+=head2 Inheritance
+
+Roles cannot inherit from classes, but they may cause any class which does
+that role to inherit from another class.  So if you write:
+
+    =begin code
+        role A is Exception { }
+        class X::Ouch does A { }
+        X::Ouch.^parents.say # ((Exception))
+    =end code
+
+...then C<X::Ouch> will inherit directly from Exception, as we can see above
+by listing its parents.
+
+=head2 Pecking order
+
+A method defined directly in a class will always override definitions from
+applied roles or from inherited classes.  If no such definition exists, methods
+from roles override methods inherited from classes.  This happens both when
+said class was brought in by a role, and also when said class was inherited
+directly.
+
+Note that each candidate for a multi-method is its own method... in this case,
+the above only applies if two such candidates have the same signature.
+Otherwise, there is no conflict, and the candidate is just added to the
+multi-method.
+
 =head2 Automatic Role Punning
 
 Any attempt to instantiate (and many other kinds of usage) a role will
