--- a/perl6/doc/doc/Language/setbagmix.pod
+++ b/perl6/doc/doc/Language/setbagmix.pod
@@ -288,7 +288,7 @@ than that element is in C<$a>.
 
 X<Baggy superset of operator> (alternate).
 
-Equivalent to L«(+>)», at codepoint U+227D (SUCCEEDS OR EQUAL TO).
+Equivalent to L«(>+)», at codepoint U+227D (SUCCEEDS OR EQUAL TO).
 
 =head2 Operators that return C<Set> or C<Bag>
 
