--- a/perl6/doc/doc/Language/terms.pod
+++ b/perl6/doc/doc/Language/terms.pod
@@ -111,8 +111,8 @@ more details.
 There are built-in identifier terms in Perl 6, which are listed below.  In
 addition one can add new identifier terms with the syntax:
 
-    sub term:<fourty-two> { 42 };
-    say fourty-two
+    sub term:<forty-two> { 42 };
+    say forty-two
 
 or as constants:
 
@@ -140,13 +140,13 @@ Returns a pseudo-random L<Num> in the range C<0..^1>.
 =head2 term π
 =head2 term pi
 
-Returns the number C<π>, i.e. the ratio between circumference and diameter
+Returns the number C<π>, i.e., the ratio between circumference and diameter
 of a circle. C<pi> is the Texas (ASCII) equivalent of C<π>.
 
 =head2 term τ
 =head2 term tau
 
-Returns the number C<τ>, i.e. the ratio between circumference and radius
+Returns the number C<τ>, i.e., the ratio between circumference and radius
 of a circle. C<tau> is the Texas (ASCII) equivalent of C<τ>.
 
 =head2 term e
