--- a/perl6/doc/doc/Type/Complex.pod
+++ b/perl6/doc/doc/Type/Complex.pod
@@ -46,6 +46,8 @@ Usage:
 
 Returns the real part of the complex number.
 
+    say (3+5i).re;    # 3
+
 =head2 method im
 
 Defined as:
@@ -57,6 +59,22 @@ Usage:
     COMPLEX.im
 
 Returns the imaginary part of the complex number.
+
+    say (3+5i).im;    # 5
+
+=head2 method reals
+
+Defined as:
+
+    method reals(Complex:D:) returns Positional:D
+
+Usage:
+
+    COMPLEX.reals
+
+Returns a two-element list containing the real and imaginary parts for this value.
+
+    say (3+5i).reals;    # (3 5)
 
 =head2 method isNaN
 
