--- a/perl6/doc/doc/Type/Cool.pod
+++ b/perl6/doc/doc/Type/Cool.pod
@@ -1285,6 +1285,9 @@ for 'huge-csv'.IO.lines -> $line {
 my @lines = 'huge-csv'.IO.lines;
 =end code
 
+Without any arguments, sub C<lines> operates on
+C<$*ARGFILES>, which defaults to C<$*IN> in the absence of any filenames.
+
 =head2 method words
 
 Defined as:
