--- a/perl6/doc/doc/Type/Dateish.pod
+++ b/perl6/doc/doc/Type/Dateish.pod
@@ -79,6 +79,9 @@ Usage:
 Returns C<True> if C<$year> is a leap year. Can be called as a class method
 if the year is provided.
 
+    say Dateish.is-leap-year(2016);           # True
+    say Date.new("1900-01-01").is-leap-year;  # False
+
 =head2 method day-of-month
 
 Defined as:
@@ -130,6 +133,9 @@ Returns the number of days in a month, where year and month default to that
 of the invocant. If both year and month are provided, it can be called as
 a class method.
 
+    say Date.new("2016-01-02").days-in-month;  # 31
+    say Dateish.days-in-month(2016, 1);        # 31
+
 =head2 method week
 
 Defined as:
@@ -147,5 +153,58 @@ at the start or end of a year, the week may actually belong to the other year.
     say $year;      # 2015
     say $week;      # 1
     say Date.new('2015-01-31').week;        # 2015 5
+
+=head2 method week-number
+
+Defined as:
+
+    method week-number(Date:D:) returns Int:D
+
+Usage:
+
+    Dateish.week-number
+
+Returns the week number (1..53) of the date specified by the invocant. The first
+week of the year is defined by ISO as the one which contains the fourth day of 
+January. Thus, dates early in January often end up in the last week of the prior 
+year, and similarly, the final few days of December may be placed in the first 
+week of the next year.
+
+    say Date.new("2014-12-31").week-number;   # 1  (first week of 2015)
+    say Date.new("2016-01-02").week-number;   # 53 (last week of 2015)
+
+=head2 method week-year
+
+Defined as:
+
+    method week-year(Date:D:) returns Int:D
+
+Usage:
+
+    Dateish.week-year
+
+Returns the week year of the date specified by the invocant. Normally C<week-year>
+is equal to C<Date.year>. Note however that dates early in January often end up in 
+the last week of the prior year, and similarly, the final few days of December 
+may be placed in the first week of the next year.
+
+    say Date.new("2015-11-15").week-year;   # 2015 
+    say Date.new("2014-12-31").week-year;   # 2015 (date belongs to the first week of 2015)
+    say Date.new("2016-01-02").week-year;   # 2015 (date belongs to the last week of 2015)
+
+=head2 method weekday-of-month
+
+Defined as:
+
+    method weekday-of-month(Date:D:) returns Int:D
+
+Usage:
+
+    Dateish.weekday-of-month
+
+Returns a number 1..5 indicating the number of times a particular day-of-week 
+has occurred so far during that month, the day itself included. 
+
+    say Date.new("2003-06-09").weekday-of-month;  # 2  (second Monday of the month)
 
 =end pod
