--- a/perl6/doc/doc/Type/IO/Path.pod
+++ b/perl6/doc/doc/Type/IO/Path.pod
@@ -362,17 +362,19 @@ instead the L<modified|/type/IO::Path#method_modified>,
 L<accessed|/type/IO::Path#method_accessed> and
 L<changed|/type/IO::Path#method_changed> methods instead.
 
-X<:e> X<:d> X<:f> X<:l> X<:r> X<:w> X<:x> X<:s> X<:z>
+X<:e> X<:d> X<:f> X<:l> X<:r> X<:w> X<:x> X<:s> X<:z> X<:rw> X<:rwx>
 
-    :e Exists
-    :d Directory
-    :f File
-    :l Symbolic link
-    :r Readable
-    :w Writable
-    :x Executable
-    :s Size
-    :z Zero size
+    :e   Exists
+    :d   Directory
+    :f   File
+    :l   Symbolic link
+    :r   Readable
+    :w   Writable
+    :x   Executable
+    :s   Size
+    :z   Zero size
+    :rw  Readable and writable
+    :rwx Readable, writable, and executable
 
 Usage:
 
