--- a/perl6/doc/doc/Type/Pod/Block.pod
+++ b/perl6/doc/doc/Type/Pod/Block.pod
@@ -21,6 +21,8 @@ Useful subclasses:
     L<Pod::Block::Code>     code blocks
     L<Pod::Block::Comment>  comments
     L<Pod::Block::Heading>  =head1 etc. headings
+    L<Pod::Block::Table>    =begin/end table
+                            tabular data
     L<Pod::Item>            list items
 
 =end table
