--- a/perl6/doc/doc/Type/Routine.pod
+++ b/perl6/doc/doc/Type/Routine.pod
@@ -69,6 +69,8 @@ Returns C<True> if the routine is a stub
 
     multi sub trait_mod:<is>(Routine $r, :$cached!)
 
+B<NOTE:> this feature is currently EXPERIMENTAL.
+
 Causes the return value of a routine to be stored, so that when subsequent
 calls with the same list of arguments are made, the stored value can be
 returned immediately instead of re-running the routine.
@@ -86,7 +88,7 @@ case:
     say foo( [1, 2, 3] );   # doesn't run foo, uses cached value
 
 =begin code
-use v6;
+use experimental :cached;
 
 sub nth-prime(Int:D $x where * > 0) is cached {
     say "Calculating {$x}th prime";
