git subrepo clone --force git://github.com/kuerbis/Term-Choose-p6.git kuerbis/Term-Choose-p6
subrepo:
  subdir:   "kuerbis/Term-Choose-p6"
  merged:   "e0b10b3"
upstream:
  origin:   "git://github.com/kuerbis/Term-Choose-p6.git"
  branch:   "master"
  commit:   "e0b10b3"
git-subrepo:
  version:  "0.2.3"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "87a8275"

--- a/kuerbis/Term-Choose-p6/Changes
+++ b/kuerbis/Term-Choose-p6/Changes
@@ -1,6 +1,15 @@
 Revision history for Term::Choose
 
 
+0.112   2016-04-27
+        - Modified '.travis.yml'
+
+0.111   2016-04-27
+        - Modified '.travis.yml'
+
+0.110   2016-04-27
+        - Announcement incompatible changes
+
 0.109   2016-03-21
         - Slow down the getch-loop so it doesn't eat up 100% of a core
 
