git subrepo clone --force git://github.com/kuerbis/Term-Choose-Util-p6.git kuerbis/Term-Choose-Util-p6
subrepo:
  subdir:   "kuerbis/Term-Choose-Util-p6"
  merged:   "d270a44"
upstream:
  origin:   "git://github.com/kuerbis/Term-Choose-Util-p6.git"
  branch:   "master"
  commit:   "d270a44"
git-subrepo:
  version:  "0.2.3"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "87a8275"

--- a/kuerbis/Term-Choose-Util-p6/Changes
+++ b/kuerbis/Term-Choose-Util-p6/Changes
@@ -1,6 +1,9 @@
 Revision history for Term::Choose::Util
 
 
+0.012   2016-04-27
+        - Announcement incompatible changes
+
 0.011   2016-04-12
         - Update documentation
 
