git subrepo clone --force git://github.com/kuerbis/Term-Form-p6.git kuerbis/Term-Form-p6
subrepo:
  subdir:   "kuerbis/Term-Form-p6"
  merged:   "b4051a5"
upstream:
  origin:   "git://github.com/kuerbis/Term-Form-p6.git"
  branch:   "master"
  commit:   "b4051a5"
git-subrepo:
  version:  "0.2.3"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "87a8275"

--- a/kuerbis/Term-Form-p6/Changes
+++ b/kuerbis/Term-Form-p6/Changes
@@ -1,6 +1,9 @@
 Revision history for Term::Form
 
 
+0.008   2016-04-27
+        - Announcement incompatible changes
+
 0.007   2016-04-15
         - no changes - enable travis test
 
